--- a/docs/sc_style.css
+++ b/docs/sc_style.css
@@ -144,7 +144,18 @@ input[type=submit]:hover {
 	padding:1px 1px 0px 0px;
 	text-align:center;
 	border-radius:40px 0px 60px 0px;
+	}
 
+#banner{
+		color:white;
+		width:720px;
+		height:179px;
+		margin-top:20px;
+		margin-left:auto;
+		margin-right:auto;
+		padding:1px 1px 150px 0px;
+		text-align:center;
+		border-radius:40px 0px 60px 0px;
 	}
 
 .pik1{
