--- a/docs/sc_style.css
+++ b/docs/sc_style.css
@@ -136,11 +136,9 @@ input[type=submit]:hover {
 
 #divpik{
 	color:white;
-	width:720px;
-	height:179px;
-	margin-top:20px;
-	margin-left:auto;
-	margin-right:auto;
+	width: 800px;
+	height: 150px;
+	margin: 25px auto;
 	padding:1px 1px 0px 0px;
 	text-align:center;
 	border-radius:40px 0px 60px 0px;
@@ -164,16 +162,17 @@ input[type=submit]:hover {
 	}
 
 .pik2{
-	background-image:url(assets/bitcoin.png);
+	background-image:url(assets/bitcoin1.png);
 	background-repeat:no-repeat;}
 
 .pik3{
 	background-image:url(assets/people.png);
 	background-repeat:no-repeat;
 	}
-.h1center{
-	margin-top:8%;
-	text-align:center;}
+
+.pik4{
+		background-image:url(assets/bitcoin2.png);
+		background-repeat:no-repeat;}
 
 #navbar{
 	position:relative;
