--- a/docs/sc_style.css
+++ b/docs/sc_style.css
@@ -53,7 +53,7 @@ h2{
 .center-row{
 	/* margin: auto;
 	max-width: 600px; */
-	margin: 0 18.75em;
+	margin: 0 300px;
 }
 .row{
 	/* width: 800px; */
