--- a/docs/sc_style.css
+++ b/docs/sc_style.css
@@ -22,9 +22,13 @@ body{
 	width:102%;
 	height:40px;
 	background-color:white;
+}
 
+#midas-fingerprint{
+	width: 50px;
+	height: 50px;
+}
 
-	}
 #social{
 	float:right;
 	background-color:white;
